# thermo

./: CHANGELOG.md  CMakeLists.txt  Doxyfile  EXAMPLES.md  INSTALL.md  LICENSE.md  LICENSE_GPLv3.md  README.md  THEORY.md  USAGE.md  USAGE_EXAMPLES.md  calctermo.c  diffthermo.c  printconfig.c  printthermo.c  readthermo.c  thermo.c  thermo.h  vdosfvib.c
doc/: Doxyfile  Makefile  bibliography.bib  footer.tex  header.tex  metadata.yaml  style.sty
examples/: CMakeLists.txt
examples/ala6/: ala6.hes  ala6.inp  ala6.out.ref
examples/argon/: argon-gas.thermo  argon-liq.thermo
examples/bhp/: bhp.out  bhp.out.ref  bhp1.inp  bhp2.inp
examples/conv/: conv.out  conv.out.ref  pps.inp  rig.inp
examples/diala/: c7ax.inp  c7eq.inp  diala.out  diala.out.ref
examples/ethane/: ethane.inp  ethane.out.ref
examples/insulin/: dimer.inp  insulin.out.ref  monomer.inp
examples/methanol/: methanol-gas-tb.thermo  methanol-gas.thermo  methanol-liq-tb.thermo  methanol-liq.thermo  methanol-water.thermo  solution-water.out.ref  vaporization-tb.out.ref  vaporization.out.ref
examples/water/: water.inp  water.out.ref
scripts/: getinfo.py
src/: calcfreqs.c  calctermo.c  cumulvib.c  cygtools.h  delete.c  diffthermo.c  dsyev.c  getline.c  init.c  kernel.c  printconfig.c  printthermo.c  readhessian.c  readthermo.c  solvents.c  thermo.c  thermo.h  thermo.h.in  vdos.c  vdosfvib.c
test/: insulin_dimer.thermo  insulin_monomer.thermo
test/insulin/: insulin.out.ref  monomer.inp  readme.txt
